--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/testmvc?serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=Geeklxp0
