--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+server.port=8080
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/testmvc?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=Geeklxp0
+
+github.client.id=95ee29c50a7aab686664
+github.client.secret=83b067c06f60cc7ad2e37af64459f136006afe99
+github.redirect.uri=http://localhost:8080/callback
