--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/testmvc?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://172.81.243.159:3306/forum?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=Geeklxp0
 
