--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.81.243.159:3306/forum?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=Geeklxp0
-
-
 github.client.id=95ee29c50a7aab686664
 github.client.secret=83b067c06f60cc7ad2e37af64459f136006afe99
 github.redirect.uri=http://localhost:8080/callback
-
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.studycloud1.forummaster.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
